# ChangeLog for dev-tex/culmus-latex
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tex/culmus-latex/ChangeLog,v 1.1 2008/10/26 15:46:28 aballier Exp $

*culmus-latex-0.7 (26 Oct 2008)

  26 Oct 2008; Alexis Ballier <aballier@gentoo.org> +metadata.xml,
  +culmus-latex-0.7.ebuild:
  Initial import for bug #168331
