@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST culmus-latex-0.7_src.tar.gz 121188 RMD160 e9adf6444decf436ef4ff61582f093d4cdddb1a8 SHA1 5a588fd4d013c631288bdcc332f1ee8fdc9f790f SHA256 2f5990b858e1e6c1a4c94a91f65f73ae3a1dd4cebe0cb536053b23589a597a5f
-EBUILD culmus-latex-0.7.ebuild 1016 RMD160 b3de678f12467e193f7b8bdd979ea3678cb5c474 SHA1 8eccb294894d1f9f6d79def20d2601f715bd132e SHA256 1a550f96a606586cbfd8359a51c9585b5bc98dbfcb3f3b54ca4741fdd9f4aa3e
-MISC ChangeLog 377 RMD160 d47c4e76e4dd439184737b25d2dff7328a7428ed SHA1 fc67eed237bf4a38b3c933dfcf89fda68b2643b7 SHA256 5d9538f821ed668d065490eb7f77f1501bf690f924d77c2e8c43d8b22fb2b39c
+EBUILD culmus-latex-0.7.ebuild 1034 RMD160 3fa7a08c57b9a85e36b14c0a2bb3399ed04bdb9a SHA1 f8a91479ffb98c0b3f4cc8c76858f58034136f29 SHA256 7c0f8f5a80045caca3580faefb96c00c50fc122a38dcd02e4c9c38848290d253
+MISC ChangeLog 494 RMD160 6dfb1cfc36caa3aa29ff4380ced8668727a7e242 SHA1 c758320cbef1680884a860d08c46c5df088c68b1 SHA256 b2757f02d67d787205f103e6452cf9bf87d97357bfc7ef2431a8f2f7a079db04
 MISC metadata.xml 156 RMD160 2bf6b2ed9ff0fcef1e902cf093ccf4ae2dcc70a0 SHA1 e9260cd53905d8569cf3327ded4c6d01653fc389 SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkEkbsACgkQvFcC4BYPU0rfCgCgx+GS0P1GQ2/VTXKrrb1dgQgh
-7TgAoKmLSWHtCKojgcs84o3qQFN9B0t8
-=yeXG
+iEYEARECAAYFAkkGDoAACgkQvFcC4BYPU0qfNwCgh2XzFt3+3kuveCV6drh5T6Wr
+TFcAoISvpf/YIbjEgxhC9q9MgRJa+l2M
+=4q9r
 -----END PGP SIGNATURE-----
