@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/culmus-latex/culmus-latex-0.7.ebuild,v 1.1 2008/10/26 15:46:28 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/culmus-latex/culmus-latex-0.7.ebuild,v 1.2 2008/10/27 18:54:50 aballier Exp $
 
 inherit latex-package
 
@@ -13,9 +13,10 @@ SLOT="0"
 KEYWORDS="~amd64"
 IUSE="examples"
 
-RDEPEND="media-fonts/culmus
-	virtual/latex-base"
-DEPEND="${RDEPEND}"
+RDEPEND="virtual/latex-base"
+DEPEND="${RDEPEND}
+	media-fonts/culmus
+	app-text/t1utils"
 
 src_compile() {
 	emake CULMUSDIR=/usr/share/fonts/culmus/ || die "failed to build fonts"
